# firetv-py

./: Dockerfile  README.md  pyproject.toml
src/firetv/: __main__.py  adb.py  config.py  homekit.py
tests/: test_adb.py  test_config.py  test_homekit.py
