[project]
name = "firetv"
version = "0.1.0"
description = "HomeKit Television bridge for Amazon Fire TV (network ADB)"
requires-python = ">=3.10,<3.14"  # HAP-python 5.x uses SafeChildWatcher (removed in 3.14)
dependencies = [
    "androidtv>=0.0.75",
    "HAP-python[QRCode]>=4.9",
]

[project.scripts]
firetv-homekit = "firetv.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firetv"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
